# nacelle

./: Cargo.toml  README.md  build-all.sh
.github/: copilot-instructions.md
.github/scripts/: miri.sh
docs/how-to/: compare-performance.md  configure-production.md  run-stress-tests.md
docs/reference/: api-stability.md  nacelle-codec.md  production-configuration.md  protocol.md  rust-api.md
docs/topics/: architecture.md  operations.md  performance-model.md  runtime-limits.md
docs/tutorials/: getting-started.md  stress-harness.md  tcp-tls.md
examples/: run-stress-test-rtt.sh  run-stress-test.ps1  run-stress-test.sh
examples/nacelle-examples/: Cargo.toml
examples/nacelle-examples/benches/: codec_comparison.rs  critical_paths.rs
examples/nacelle-pipeline-prototype/: Cargo.toml  README.md
examples/nacelle-pipeline-prototype/src/: lib.rs
examples/nacelle-proxy/: Cargo.toml  README.md
examples/nacelle-proxy/src/: app.rs  config.rs  reload.rs  service.rs  wire.rs
examples/nacelle-reference-protocol/src/: lib.rs
examples/nacelle-reference-protocol/tests/: properties.rs
examples/nacelle-stress-common/: Cargo.toml
examples/nacelle-stress-common/src/: lib.rs
examples/nacelle-stress-server/: Cargo.toml  config.example.toml
examples/nacelle-stress-server/src/: main.rs  shared.rs
examples/nacelle-stress-test/: Cargo.toml
nacelle/: Cargo.toml
nacelle-codec/: Cargo.toml  README.md
nacelle-codec/benches/: framed_comparison.rs
nacelle-core/: Cargo.toml
nacelle-core/src/: error.rs  lib.rs  limits.rs  peer_rate.rs  pipeline.rs  request.rs  tls.rs
nacelle-core/src/telemetry/: mod.rs  sink.rs
nacelle-http/: Cargo.toml
nacelle-http/src/: encoder.rs  lib.rs  pipeline.rs  server.rs
nacelle-openssl/: Cargo.toml
nacelle-openssl/src/: lib.rs
nacelle-rustls/: Cargo.toml
nacelle-rustls/src/: lib.rs
nacelle-tcp/: Cargo.toml
nacelle-tcp/benches/: response_delivery.rs
nacelle-tcp/src/: config.rs  connection.rs  lib.rs  protocol.rs  server.rs
nacelle-tcp/src/connection/: body.rs  framing.rs  io.rs  metrics.rs  request.rs  response.rs  tests.rs
nacelle-tcp/src/runtime/: common.rs  local.rs  openssl.rs  openssl_optional.rs  openssl_tests.rs  rustls.rs  rustls_tests.rs  tcp.rs  unix.rs
nacelle-tcp/src/server/: listeners.rs
nacelle/benches/: critical_paths.rs
nacelle/examples/: app_core.rs
nacelle/src/: app.rs  host.rs  lib.rs  reference_protocol.rs  thread_per_core.rs
nacelle/tests/: facade_namespaces.rs  protocol_fuzz.rs
scripts/: capture-performance-baseline.ps1  compare-performance.ps1  lint.ps1  performance-common.ps1  profile-linux.sh  publish-crates.ps1  run-native-performance.ps1  validate-all.ps1  validate-all.sh
