[package]
name = "nacelle-http"
version = "0.3.0-beta.3"
edition = "2024"
rust-version.workspace = true
description = "Hyper HTTP/1 transport and HTTP edge policy runtime for Nacelle streaming handlers."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
keywords = ["networking", "tokio", "http"]
categories = ["asynchronous", "network-programming"]

[features]
default = []
tls = []
rustls = ["tls", "dep:nacelle-rustls", "dep:rustls", "dep:tokio-rustls", "nacelle-core/tls"]
tls-self-signed = ["rustls", "nacelle-rustls/self-signed"]

[dependencies]
bytes = { workspace = true }
futures-core = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["http1", "server"] }
hyper-util = { workspace = true, features = ["server", "tokio"] }
nacelle-core = { workspace = true }
nacelle-rustls = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
tokio-rustls = { workspace = true, optional = true }
tracing = { workspace = true }
