[package]
name = "nacelle-pipeline-prototype"
version = "0.0.0"
edition = "2024"
rust-version.workspace = true
description = "Unpublished typed request pipeline contract prototype for Nacelle."
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
bytes = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
nacelle-core = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true